--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,4 +1,19 @@
 .navbar-container{
     height: 7rem;
     background-color: #5973ff;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar{
+    width: 85%;
+    display: flex;
+    align-items: center;
+    background-color: blueviolet;
+}
+
+.navbar-logo{
+    font-size: 2.5rem;
+    color: white;
+    text-transform: capitalize;
 }
