added navbar links

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,3 +1,4 @@
+/* navbar */
 .navbar-container{
     height: 7rem;
     background-color: #5973ff;
@@ -9,11 +10,24 @@
     width: 85%;
     display: flex;
     align-items: center;
-    background-color: blueviolet;
+    justify-content: space-between;
 }
 
 .navbar-logo{
     font-size: 2.5rem;
     color: white;
     text-transform: capitalize;
+}
+
+.navbar-links{
+    display: flex;
+    list-style: none;
+}
+
+.navbar-link a{
+    text-decoration: none;
+    font-size: 1.8rem;
+    margin-left: 3rem;
+    letter-spacing: 0.1rem;
+    color: white;
 }
