styled movie form

--- a/client/src/components/movieSection/movieSection.css
+++ b/client/src/components/movieSection/movieSection.css
@@ -32,8 +32,33 @@
 
 .movie-form > input{
     width: 100%;
+    margin: 1.5rem 0;
+    outline: none;
+    border: none;
+    padding: 1rem;
+    border-radius: 0.5rem;
 }
 
 .movie-form > select{
     width: 100%;
+    outline: none;
+    border: none;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.movie-form > select option{
+    color: gray;
+}
+
+.movie-form-btn > button{
+    width: 25rem;
+    height: 3rem;
+    background-color: #8da7ff;
+    border: none;
+    border-radius: 0.5rem;
+    margin-bottom: 1.5rem;
+    color: white;
+    font-size: 1.7rem;
+    cursor: pointer;
 }
