--- a/client/src/components/movieSection/movieSection.css
+++ b/client/src/components/movieSection/movieSection.css
@@ -55,7 +55,6 @@
 
 .movie-form-btn > button{
     width: 25rem;
-    height: 3rem;
     background-color: #8da7ff;
     border: none;
     border-radius: 0.5rem;
@@ -63,13 +62,15 @@
     color: white;
     font-size: 1.7rem;
     cursor: pointer;
+    padding: 1rem 0;
 }
 
 /* movie list */
 .movie-list{
     width: 100%;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .movie-list-search-sort{
@@ -100,3 +101,47 @@
     background-color: #8da7ff;
     color: white;
 }
+
+.movie-list-table{
+    width: 100%;
+    background-color: #efefef;
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+    border-radius: 0.8rem;
+}
+
+.movie-list-table table{
+    width: 95%;
+    margin: 1.5rem 0;
+    border-collapse: collapse;
+}
+
+.movie-list-table table img{
+    height: 1.8rem;
+    margin: 0 1rem;
+    cursor: pointer;
+}
+
+.movie-list-table table thead{
+    background-color: #8da7ff;
+    color: white;
+    font-size: 1.7rem;
+}
+
+.movie-list-table table thead > tr th{
+    padding: 0.8rem 0;
+}
+
+.movie-list-table table tbody > tr{
+    background-color: white;
+    font-size: 1.7rem;
+    text-align: center;
+    border-top: 1rem solid #efefef;
+}
+
+.movie-list-table table tbody > tr td{
+    padding: 0.8rem;
+}
+
+/* movie pagination and download pdf */
