--- a/client/src/components/movieSection/movieSection.css
+++ b/client/src/components/movieSection/movieSection.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     margin-top: 8rem;
+    position: relative;
 }
 
 .movie{
@@ -213,4 +214,56 @@
     font-size: 1.7rem;
     cursor: pointer;
     padding: 1rem 0;
+}
+
+.delete-modal-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.3);
+    justify-content: center;
+    align-items: center;
+    z-index: 991;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.delete-modal{
+    width: 25rem;
+    background-color: #efefef;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 1rem;
+    border-radius: 0.8rem;
+}
+
+.delete-modal h1{
+    margin: 2rem 0 10rem 0;
+    font-size: 2.5rem;
+}
+
+.delete-modal-btns{
+    margin-bottom: 2rem;
+}
+
+.delete-modal-btns button:first-child{
+    margin-right: 2rem;
+    background-color: #8da7ff;
+}
+
+.delete-modal-btns button{
+    height: 3rem;
+    width: 7rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+    border: none;
+    color: white;
+    border-radius: 0.5rem;
+}
+
+.delete-modal-btns button:last-child{
+    margin-left: 2rem;
+    background-color: #dc3545;
 }
