added functional update modal

--- a/client/src/components/movieSection/movieSection.css
+++ b/client/src/components/movieSection/movieSection.css
@@ -267,3 +267,99 @@
     margin-left: 2rem;
     background-color: #dc3545;
 }
+
+.edit-modal-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.3);
+    justify-content: center;
+    align-items: center;
+    z-index: 991;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.edit-modal{
+    width: 25rem;
+    background-color: #efefef;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 1rem;
+    border-radius: 0.8rem;
+    position: relative;
+}
+
+.edit-modal > input{
+    width: 100%;
+    margin: 1.5rem 0;
+    outline: none;
+    border: none;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.edit-modal > select{
+    width: 100%;
+    outline: none;
+    border: none;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.edit-modal > select option{
+    color: gray;
+}
+
+.edit-modal-btns{
+    margin-bottom: 2rem;
+}
+
+.edit-modal-btns button:first-child{
+    margin-right: 2rem;
+    background-color: #8da7ff;
+}
+
+.edit-modal-btns button{
+    height: 3rem;
+    width: 7rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+    border: none;
+    color: white;
+    border-radius: 0.5rem;
+}
+
+.edit-modal-btns button:last-child{
+    margin-left: 2rem;
+    background-color: #8da7ff;
+}
+
+.modal-request-message{
+    height: 3rem;
+    width: 20rem;
+    position: absolute;
+    top: 0.5rem;
+    left: 50%;
+    color: white;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.7rem;
+}
+
+.modal-request-message.warning{
+    background-color: #ffc107;
+}
+
+.modal-request-message.success{
+    background-color: #28a745;
+}
+
+.modal-request-message.error{
+    background-color: #dc3545;
+}
