--- a/client/src/components/movieSection/movieSection.css
+++ b/client/src/components/movieSection/movieSection.css
@@ -357,3 +357,36 @@
 .modal-request-message.error{
     background-color: #dc3545;
 }
+
+@media only screen and (max-width: 768px){
+    thead{
+        display: none;
+    }
+
+    table, tbody, tr, td{
+        display: block;
+        width: 100%;
+    }
+
+    tr{
+        margin-bottom: 1.5rem;
+    }
+
+    td{
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+    }
+
+    td::before{
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+        width: 50%;
+        padding-left: 1.5rem;
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-align: left;
+        color: #8da7ff;
+    }
+}
