--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -25,3 +25,17 @@
     color: white;
     font-size: 1.7rem;
 }
+
+@media screen and (max-width: 768px) {
+    .footer-container{
+        height: 8rem;
+    }
+
+    .footer{
+        flex-direction: column;
+    }
+
+    .footer-logo{
+        margin-bottom: 2rem;
+    }
+}
