--- a/client/src/components/movieSection/movieSection.css
+++ b/client/src/components/movieSection/movieSection.css
@@ -206,6 +206,15 @@
     padding: 1rem 0;
 }
 
+.movie-pagination-movies-per-page select{
+    outline: none;
+    border: none;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    background-color: #8da7ff;
+    color: white;
+}
+
 .movie-average-rating{
     width: 95%;
     display: flex;
@@ -457,6 +466,15 @@
 
     .movie-pagination button{
         width: 100%;
+    }
+
+    .movie-pagination-movies-per-page{
+        width: 100%;
+    }
+
+    .movie-pagination-movies-per-page select{
+        width: 100%;
+        margin-bottom: 1rem;
     }
 
     .movie-average-rating{
